2001-02-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-async-exec): New customizable variable.
	(w3m-exec-process): Use 'w3m-async-exec' instead of 'w3m-process-type'.

2001-02-07  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el: Fixed small and thoughtless bugs...
	(w3m-bookmark-file-modified-p): Bug fix.
	(w3m-bookmark-save): Bug fix. Don't forget time stamp updating.
	(w3m-bookmark-add): Bug fix. Function name miss-typing.

2001-02-07  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el: Add bookmark operations. This feature is very ad-hoc.
	Support loading w3m's bookmark file into internal bookmark data,
	adding new entry interactively, and saving data as w3m's bookmark
	file format. 
	(w3m-bookmark-file-coding-system): New user varible.
	(w3m-bookmark-data): New internal variable.
	(w3m-bookmark-file-time-stamp): ditto.
	(w3m-bookmark-section-history): ditto.
	(w3m-bookmark-title-history): ditto.
	(w3m-mode-map): Add bookmark operation functions to mode map.
	(w3m-bookmark-file-modified-p): New function.
	(w3m-bookmark-parse): ditto.
	(w3m-bookmark-load): ditto.
	(w3m-bookmark-save): ditto.
	(w3m-bookmark-data-prepare): ditto.
	(w3m-bookmark-add): ditto.
	(w3m-bookmark-add-this-url): ditto.
	(w3m-bookmark-add-current-url): ditto.

2000-12-12  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-sub-list, w3m-load-list, w3m-save-list): New utility
	function.
	(w3m-arrived-list-load): Refine and move out common code into
	w3m-load-list.
	(w3m-arrived-list-save): Refine and move out common code into
	w3m-save-list and w3m-sub-list. (Previous code had side effect
	of nreverse).

2000-12-10  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* makepatch.pl, Makefile, .cvsignore: New files.

2000-10-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-this-url): Chang optinal argument 'arg'.
	(w3m-next-anchor, w3m-previous-anchor): Bind 'pos'.
	(w3m-fontify): Put mouse-face at anchor and image property.